--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GeoChat AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              'brand-bg': '#fefae0',
+              'brand-surface': '#ffffff',
+              'brand-text-primary': '#2d3748',
+              'brand-text-secondary': '#718096',
+              'brand-primary': '#2a9d8f',
+              'brand-primary-hover': '#264653',
+              'brand-secondary': '#e9c46a',
+              'brand-accent': '#f4a261',
+              'brand-border': '#e2e8f0',
+              'brand-error': '#e53e3e',
+            }
+          }
+        }
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
@@ -18,7 +37,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-900 text-white">
+  <body class="bg-brand-bg text-brand-text-primary">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
